--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "build": "vite build"
   },
   "dependencies": {
+    "d3": "^5.16.0",
+    "d3-scale": "^3.2.1",
+    "d3-selection": "^1.4.1",
+    "d3-zoom": "^1.8.3",
     "tailwindcss": "^1.4.6",
     "vue": "^3.0.0-beta.14"
   },
