--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "estimator",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,11 +7,10 @@
   },
   "dependencies": {
     "d3": "^5.16.0",
-    "d3-scale": "^3.2.1",
-    "d3-selection": "^1.4.1",
-    "d3-zoom": "^1.8.3",
     "tailwindcss": "^1.4.6",
-    "vue": "^3.0.0-beta.14"
+    "vue": "^3.0.0-beta.14",
+    "vue-router": "^4.0.0-alpha.12",
+    "vuex": "^4.0.0-beta.2"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-beta.14",
